--- a/QANDA/Zuul/src/main/resources/application.yml
+++ b/QANDA/Zuul/src/main/resources/application.yml
@@ -1,23 +1,35 @@
-spring:
-  application:
-    name: zuul-api-gateway-server
-server:
-  port: 8765
 eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka
-zuul:
-  host:
-    connectionRequestTimeoutMillis: 99000000
-    socketTimeoutMillis: 99000000
-    sensitiveHeaders: 'Cookie,Set-Cookie'
-ribbon:
-  ReadTimeout: 99000000
-  SocketTimeout: 99000000
+    client:
+        fetchRegistry: true
+        registerWithEureka: true
+        service-url:
+            default-zone: http://localhost:8761/eureka/
+    server:
+        wait-time-in-ms-when-sync-empty: 0
 logging:
-  file: './log/zuulGatewayService.log'
-identity:
-  url: '/identity/login'
+    file: ./log/zuulGatewayService.log
+server:
+    port: 8766
+spring:
+    application:
+        name: zuul-gateway
+    data:
+        mongodb:
+            database: Oauthdb
+            authentication-database: admin
+            username: root
+            password: root
+            host: localhost
+            port: 27017
+
+   
+security:
+    user:
+        password: password
+    oauth2:
+        resource:
+            filter-order: 3
+    permitAll: true
+
+audit:
+    storageEngine: mongoDB   
